--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
 }
 
 .nav{
@@ -37,14 +36,18 @@ input{
 
 .results-container{
   height: 100%;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
   padding: 0px 10px 10px 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 0px 2px 2px 2px;
 }
 
 .btn-options {
   margin-left: 20px;
+  margin-top: 50px;
 }
 
 .btn-options button {
