--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -1,15 +1,5 @@
-.results{
-  height: 680px;
-  display: flex;
-  flex-wrap: wrap;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0px 20px 15px 1px  black;
-  overflow-y: auto;
-  padding-top: 20px;
-}
-
-.results .word{
+.word{
   color: rgb(201, 132, 3);
-  margin: 0px 10px 0px 10px;
+  margin: 0px 10px 10px 10px;
+  border-bottom: 1px solid rgb(200, 200, 200);
 }
