cursor pointer css

--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -2,4 +2,8 @@
   color: rgb(201, 132, 3);
   margin: 0px 10px 10px 10px;
   border-bottom: 1px solid rgb(200, 200, 200);
+
+  &:hover {
+    cursor: pointer;
+  }
 }
